--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -18,6 +18,8 @@ $(document).ready(function() {
 
 
 <h2><%= @chart.title %></h2>
+<h2><%= @from %></h2>
+<h2><%= @to %></h2>
 
 
 <h3>Selected Projects</h3>
