--- a/app/views/charts/test.html.erb
+++ b/app/views/charts/test.html.erb
@@ -1,3 +1,5 @@
 <h2><%= @chart.title %></h2>
 <h2><%= @chart.from %></h2>
 <h2><%= @chart.to %></h2>
+<h1><%= @funciono %></h1>
+<h1><%= @no %></h1>
