Se anadio el modelo de procesado y junto con las funcionalidades de disk usage

--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -57,6 +57,14 @@
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
 						<%=link_to "Charts", charts_path%>	
 					</li>
+					</li>
+					<li id="menu-item-88" class="menu-item menu-item-type-custom">
+						<%=link_to "Procces Spaces", process_spaces_path%>
+						<ul class="sub-menu">										
+							<li id="menu-item-89" class="menu-item menu-item-type-post_type ultimo">
+								<%=link_to "Free Disk", freedisk_process_spaces_path %></li>						
+						</ul>	
+					</li>
 					
 			
 				</ul>
