--- a/app/views/charts/test.html.erb
+++ b/app/views/charts/test.html.erb
@@ -2,5 +2,4 @@
 <h2><%= @chart.title %></h2>
 <h2><%= @chart.from %></h2>
 <h2><%= @chart.to %></h2>
-<h1><%= @funciono %></h1>
-<h1><%= @no %></h1>
+<h1><%= @type %></h1>
