--- a/app/views/layouts/_heading.html.erb
+++ b/app/views/layouts/_heading.html.erb
@@ -55,7 +55,12 @@
 						</ul>		
 					</li>
 					<li id="menu-item-37" class="menu-item menu-item-type-custom">
-						<%=link_to "Charts", charts_path%>	
+						<%=link_to "Charts", charts_path%>
+						<ul class="sub-menu">										
+							<li id="menu-item-89" class="menu-item menu-item-type-post_type ultimo">
+								<%=link_to "Disk Usage", disk_space_charts_path %>
+							</li>						
+						</ul>	
 					</li>
 					</li>
 					<li id="menu-item-88" class="menu-item menu-item-type-custom">
