--- a/app/views/charts/show_disk_space.html.erb
+++ b/app/views/charts/show_disk_space.html.erb
@@ -24,7 +24,7 @@ $(document).ready(function() {
 
 
 
-<%= render :partial => "shared/disk_line", :locals => { :insert_div => "memory_line_chart", :title => "Memory Vs Virtual Memory"} %>
+<%= render :partial => "shared/disk_line", :locals => { :insert_div => "memory_line_chart"}%>
 
 
-<div id="memory_line_chart" style="width:560px; height:300px"></div>
+<div id="memory_line_chart" style="width:800px; height:450px"></div>
