se mejoro la interfaz de software, formato, projectos y layout general

--- a/app/views/charts/bar_chart.html.erb
+++ b/app/views/charts/bar_chart.html.erb
@@ -16,7 +16,7 @@ $(document).ready(function() {
 </script>
  <% end %>
 
-<h2><%= @chart.title %> <%= @from %> <%= @to %></h2>
+<h3>Desde: <%= @from %> Hasta: <%= @to %></h3>
 
 
 
