--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -42,6 +42,10 @@ $(document).ready(function() {
 				                this.series.name +': '+ this.y	;
 				         }
 				      },
+					credits: {
+					        text: 'PICNIC Monitoring System',
+					        href: 'https://neuroweb01.pic.es/'
+					    },
 				      plotOptions: {
 				         bar: {
 				            dataLabels: {
