--- a/app/views/procesos/index.html.erb
+++ b/app/views/procesos/index.html.erb
@@ -18,8 +18,8 @@ $(document).ready(function() {
 });
 </script>
  <% end %>
-<h1>Lista de procesos</h1>
-<%= link_to 'New proceso', new_proceso_path %>
+<h1>Processes</h1>
+<%= link_to 'Add process', new_proceso_path %>
 
 <table id="procesos">
 	<thead>
