--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing project</h1>
+<h1>Editing <%= @project.name %></h1>
 
 <%= render :partial => "form", :locals => { :button_label => "Update Project"} %>
 
