--- a/app/views/shared/_bar.html.erb
+++ b/app/views/shared/_bar.html.erb
@@ -14,7 +14,7 @@
 			},
 			yAxis:{
 				title:{
-					text: "Memoria en kb, Tiempo en segundos (multiplicar por mil)"
+					text: "Segundos y kb"
 				}
 			},
 			tooltip: {
