--- a/app/views/procesos/new.html.erb
+++ b/app/views/procesos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New proceso</h1>
+<h1>New process</h1>
 
-<%= render :partial => "form", :locals => { :button_label => "Añadir Proceso"} %>
+<%= render :partial => "form", :locals => { :button_label => "Add Process"} %>
 
 <%= link_to 'Back', procesos_path %>
