--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing projects</h1>
+<h1>Projects</h1>
 
 <table>
   <tr>
     <th>Name</th>
   </tr>
-
+<%= link_to 'New project', new_project_path %>
 <% @projects.each do |project| %>
   <tr>
     <td><%=h project.name %></td>
@@ -17,4 +17,3 @@
 
 <br />
 
-<%= link_to 'New project', new_project_path %>
