--- a/app/views/charts/show_disk_space.html.erb
+++ b/app/views/charts/show_disk_space.html.erb
@@ -15,16 +15,11 @@ $(document).ready(function() {
 });
 </script>
  <% end %>
+<h4>From: <%= @from.readable_inspect %></h4> 
+<h4>To: <%= @to.readable_inspect %></h4>
 
 
-<h2><%= @chart.title %></h2>
-<h2><%= @from %></h2>
-<h2><%= @to %></h2>
+<%= render :partial => "shared/disk_line", :locals => { :insert_div => "chart"}%>
 
 
-
-
-<%= render :partial => "shared/disk_line", :locals => { :insert_div => "memory_line_chart"}%>
-
-
-<div id="memory_line_chart" style="width:800px; height:450px"></div>
+<div id="chart" style="width:800px; height:450px"></div>
