--- a/app/views/shared/_disk_line.html.erb
+++ b/app/views/shared/_disk_line.html.erb
@@ -41,6 +41,9 @@ $(document).ready(function() {
 			y: 100,
 			borderWidth: 0
 		},
+		credits: {
+			enabled: false
+		},
 		series: [
 
 		<% for series in @data %>
